# joe-ai

./: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
agents/follow/: .gitignore  package.json
agents/follow/skills/github-daily/: SKILL.md  config.json
agents/follow/skills/producthunt-ai/: SKILL.md  config.json
agents/follow/skills/producthunt-daily/: config.json
agents/shawn-math/: .gitignore  package.json
apps/follow/: package.json  worker-configuration.d.ts
apps/follow/scripts/: prepare.ts  upload-remote.ts
apps/main/: package.json
demos/: README.md  main.py  pyproject.toml  qwen_tts_demo.py  video_to_subtitles.py
follow/: .gitignore  GEMINI.md  README.md  package-lock.json  package.json
follow/skills/hacker-news/: SKILL.md  config.json
follow/skills/producthunt-daily/: SKILL.md  translate.md
follow/skills/producthunt-daily-output/: SKILL.md  config.json
follow/skills/superhuman-ai/: SKILL.md  config.json
follow/skills/superhuman-ai-browser/: config.json
follow/skills/therundown-ai/: SKILL.md  config.json
scripts/: producthunt-daily-schedule.sh
shawn-math/: README.md  package.json
shawn-math/skills/math-print-quiz/: SKILL.md  index.js  styles.css  template.js
sites/follow/: .env.example  .gitignore  astro.config.mjs  drizzle.config.ts  package.json  pnpm-lock.yaml  tailwind.config.mjs  wrangler.jsonc
sites/follow/scripts/: prepare.ts  upload-local.ts  upload-remote.ts  upload.ts
sites/follow/src/: env.d.ts  index.css
sites/main/: package.json  pnpm-lock.yaml  worker-configuration.d.ts  wrangler.jsonc
(+76 files in other folders)
