[project]
name = "demos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.25.17",
    "librosa>=0.11.0",
    "moviepy>=2.2.1",
    "python-dotenv>=1.2.2",
    "qwen-asr>=0.0.6",
    "soundfile>=0.13.1",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
]
